<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="monster"
            type="edmanfeng.paddamagecalculator.GameModel.Monster"/>
    </data>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 android:orientation="vertical"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 tools:layout_editor_absoluteY="0dp"
                                                 tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="17dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:text="@{monster.name}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="name"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/monster_num_text_view"
            android:layout_width="0dp"
            android:layout_height="17dp"
            android:text="@{String.valueOf(monster.num)}"
            tools:text="Number"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:text="@string/edit_hp"
            tools:text="@string/edit_hp"
            android:id="@+id/textView3"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/monster_hp_edit_text"
            />
        <EditText
            android:id="@+id/monster_hp_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hp_hint"
            android:text="@{String.valueOf(monster.hp)}"
            android:layout_marginRight="246dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/monster_num_text_view"
            app:layout_constraintLeft_toRightOf="@+id/textView3"
            android:layout_marginLeft="8dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_atk"
            tools:layout_conversion_absoluteX="0dp"
            tools:layout_conversion_absoluteY="495dp"
            tools:layout_conversion_absoluteWidth="21dp"
            tools:layout_conversion_absoluteHeight="0dp"
            android:id="@+id/textView"
            app:layout_constraintBaseline_toBaselineOf="@+id/monster_atk_edit_text"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/monster_atk_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:hint="@string/edit_atk_hint"
            android:text="@{String.valueOf(monster.atk)}"
            tools:layout_conversion_absoluteX="21dp"
            tools:layout_conversion_absoluteY="495dp"
            tools:layout_conversion_absoluteWidth="80dp"
            tools:layout_conversion_absoluteHeight="0dp"
            android:layout_marginTop="21dp"
            app:layout_constraintTop_toBottomOf="@+id/monster_hp_edit_text"
            app:layout_constraintLeft_toRightOf="@+id/textView"
            android:layout_marginLeft="19dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/edit_rcv"
            tools:layout_conversion_absoluteX="0dp"
            tools:layout_conversion_absoluteY="495dp"
            tools:layout_conversion_absoluteWidth="23dp"
            tools:layout_conversion_absoluteHeight="0dp"
            android:id="@+id/textView2"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/monster_rcv_edit_text"/>

        <EditText
            android:id="@+id/monster_rcv_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_rcv_hint"
            android:text="@{String.valueOf(monster.rcv)}"
            tools:layout_conversion_absoluteX="23dp"
            tools:layout_conversion_absoluteY="495dp"
            tools:layout_conversion_absoluteWidth="82dp"
            tools:layout_conversion_absoluteHeight="0dp"
            android:layout_marginTop="21dp"
            app:layout_constraintTop_toBottomOf="@+id/monster_atk_edit_text"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.035"/>


    </android.support.constraint.ConstraintLayout>
</layout>